# sphinx-seo-redirect

./: .gitignore  Pipfile  README.md  requirements.txt  setup.cfg
sphinx-seo-redirect/: __init__.py  directive.py
sphinx_seo_redirect/: __init__.py  directive.py  node.py  sphinx.py  walker.py
src/sphinx-seo-redirect/: __init__.py  node.py  walker.py
tests/: conftest.py  init_test.py  seo-redirect_test.py  sphinx_test.py
