[metadata]
name = sphinx-seo-redirect
version = 0.1.0
author = Alan Lew
author_email = alan@ethereal.cc
description = A sphinx extension to handle page directs for SEO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neflyte/sphinx-seo-redirect
project_urls =
    Bug Tracker = https://github.com/neflyte/sphinx-seo-redirect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = sphinx-seo-redirect
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sphinx-seo-redirect
